Estilização da  página inserirQuestoes

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@
 
 .login-form {
     background-color: #fff;
-    border: 1px solid #94958B;
+    border: 1px solid #94958B solid #94958B;
     box-shadow: 8px 8px 34px #707070,
         -8px -8px 34px #5e5e5e;
 }
@@ -163,7 +163,7 @@
 }
 
 .login-input {
-    border-bottom: 1px solid #94958B;
+    border-bottom: 1px solid #94958B solid #94958B;
     transition: 0.1s;
 }
 
@@ -194,7 +194,7 @@
     width: 100%;
     height: 100px;
     background-color: #ffffff;
-    box-shadow: -1px 7px 11px -1px rgba(0, 0, 0, 0.1);
+    box-shadow: -1px solid #94958B 7px 11px -1px solid #94958B rgba(0, 0, 0, 0.1);
 }
 
 #userDetails,
@@ -251,7 +251,7 @@
 
 .action-link:last-child {
     color: #2D3047;
-    border: 1px solid #94958B;
+    border: 1px solid #94958B solid #94958B;
 }
 
 .action-link:last-child:hover {
@@ -263,7 +263,7 @@
 }
 
 .cardVideo {
-    border: 1px solid #ccc;
+    border: 1px solid #94958B solid #ccc;
     border-radius: 8px;
     width: 50%;
     margin: 20px;
@@ -273,7 +273,7 @@
 .cardVideo-header {
     background-color: #f2f2f2;
     padding: 10px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #94958B solid #ccc;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
 }
@@ -546,7 +546,7 @@ footer {
     display: flex;
     align-items: center;
     cursor: pointer;
-    box-shadow: 10px 10px 0px 1px rgba(240, 240, 240, 0.75);
+    box-shadow: 10px 10px 0px 1px solid #94958B rgba(240, 240, 240, 0.75);
     transition: 0.3s;
 }
 
@@ -671,7 +671,7 @@ footer {
     background-color: #fff;
     width: 30%;
     align-items: center;
-    box-shadow: 0px 1px 40px -13px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px solid #94958B 40px -13px rgba(0, 0, 0, 0.2);
 }
 
 .cards-container i {
@@ -732,7 +732,7 @@ footer {
 /* CLASSE QUE ALTERA IMAGEM DO PERFIL */
 .perfil-conteudo img {
     border-radius: 70px;
-    border: 1px solid;
+    border: 1px solid #94958B solid;
     height: 200px;
     width: 200px;
 }
@@ -764,14 +764,14 @@ footer {
     width: 100%;
     background-color: #fff;
     border-radius: 5px;
-    box-shadow: 0px 1px 40px -13px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px solid #94958B 40px -13px rgba(0, 0, 0, 0.2);
 }
 
 .BtnMes {
     margin: 10px 0;
     padding: 10px;
     background-color: #fff;
-    border: 1px solid #94958B;
+    border: 1px solid #94958B solid #94958B;
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
@@ -801,7 +801,7 @@ footer {
     text-align: center;
     width: 25%;
     color: #2D3047;
-    box-shadow: 0px 1px 40px -13px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 1px solid #94958B 40px -13px rgba(0, 0, 0, 0.3);
 }
 
 .personal-stats .card:first-child {
@@ -954,7 +954,7 @@ tr:nth-child(odd) {
 th,
 td {
     padding: 10px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #94958B solid #ddd;
 }
 
 
@@ -976,7 +976,7 @@ th {
     font-size: 18px;
     border-radius: 0 10px 10px 0;
     transition: 0.3s;
-    border: 1px solid #94958B;
+    border: 1px solid #94958B solid #94958B;
 }
 
 #escolha:hover {
@@ -990,7 +990,7 @@ th {
 #select-container label {
     display: flex;
     background-color: #cccccc;
-    border: 1px solid #94958B;
+    border: 1px solid #94958B solid #94958B;
     justify-content: center;
     padding: 10px;
     align-items: center;
@@ -1003,7 +1003,7 @@ th {
 
 .questoes-container {
     background-color: #fff;
-    border: 1px solid #f2f2f2;
+    border: 1px solid #94958B solid #f2f2f2;
     border-radius: 5px;
     width: 80%;
     margin: 15px;
@@ -1047,7 +1047,7 @@ th {
     display: flex;
     margin: 10px 0;
     padding: 15px;
-    border: 1px solid #94958B;
+    border: 1px solid #94958B solid #94958B;
     border-radius: 5px;
     gap: 10px;
     cursor: pointer;
@@ -1057,7 +1057,7 @@ th {
     display: flex;
     margin: 10px 0;
     padding: 15px;
-    border: 1px solid #075AB3;
+    border: 1px solid #94958B solid #075AB3;
     border-radius: 5px;
     gap: 10px;
     cursor: pointer;
@@ -1096,6 +1096,79 @@ th {
 
 
 /* FIM - QUESTOES */
+
+/* InserirQuestoes */
+
+
+#inserirQuestoes-container{
+    margin: 50px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    width: 80%;
+    border: 1px solid #e4e3e3;
+}
+
+.inserirQuestoesInput-form{
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+}
+
+#inserirQuestoes-form label{
+    font-weight: 600;
+    font-size: 14px;
+    margin: 6px 0;
+}
+
+#inserirQuestoes-form input{
+    padding: 10px;
+    font-size: 16px;
+}
+
+#inserirQuestoes-form textarea{
+    max-width: 100%;
+}
+
+#inserirQuestoes-title{
+    width: 100%;
+    border-bottom: 1px solid #e4e3e3;
+}
+
+#inserirQuestoes-title h1{
+    margin: 10px 20px;
+    color: #94958B;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+#inserirQuestoesButton-container{
+    background-color: #f2f2f2;
+    width: 100%;
+    padding: 20px;
+}
+
+#inserirQuestoesButton-container button{
+    padding: 10px;
+    border: none;
+    background-color: #075AB3;
+    color: #fff;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#inserirQuestoesButton-container button:hover{
+    background-color: #0550a0;
+}
+
+.inserirQuestoesAlternativas{
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+}
+
+
+/* FIM-INSERIRQUESTOES*/
 
 @media (max-width: 480px) {
     /*LOGIN*/
