--- a/css/style.css
+++ b/css/style.css
@@ -1171,6 +1171,11 @@ th {
     font-size: 16px;
 }
 
+#inserirQuestoes-form select{
+    padding: 10px;
+    font-size: 16px;
+}
+
 #inserirQuestoes-form textarea{
     max-width: 100%;
 }
