--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
     background-color: #e75757;
     position: absolute;
     top: 0;
+    left: 50%;
     color: #fff;
 }
 
@@ -76,13 +77,12 @@
     display: flex;
 }
 
-.login-container,
 .login-form,
 .login-title {
     justify-content: center;
     align-items: center;
-    height: auto;
 }
+
 
 .loginInput-container,
 .login-container,
@@ -94,18 +94,18 @@
 
 .login-title,
 .login-title small,
-.btn-form,
-.label-icon {
-    margin: 10px 0;
+.btn-form, .label-icon {
+    margin: 5px 0;
 }
 
 .login-form {
     width: 35%;
 }
 
-.logo {
-    width: 100px;
-    height: 100px;
+.logoENADE {
+    margin: 20px 0;
+    width: 60px;
+    height: 0px;
 }
 
 .btn-form,
@@ -125,11 +125,13 @@
 
 .btn-form,
 .loginInput-container {
-    width: 80%;
+    width: 90%;
 }
 
 .login-container {
-    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     background-color: #94958B;
     height: 100vh;
 }
@@ -163,7 +165,7 @@
 }
 
 .login-input {
-    border-bottom: 1px solid #94958B solid #94958B;
+    border-bottom: 1px solid #ccc;
     transition: 0.1s;
 }
 
@@ -194,7 +196,7 @@
     width: 100%;
     height: 100px;
     background-color: #ffffff;
-    box-shadow: -1px solid #94958B 7px 11px -1px solid #94958B rgba(0, 0, 0, 0.1);
+    box-shadow: -1px 7px 11px -1px rgba(0, 0, 0, 0.1);
 }
 
 #userDetails,
@@ -251,11 +253,11 @@
 
 .action-link:last-child {
     color: #2D3047;
-    border: 1px solid #94958B solid #94958B;
+    border: 1px solid #ccc;
 }
 
 .action-link:last-child:hover {
-    background-color: #f2f2f2;
+    background-color: #ccc;
 }
 
 .action-link i {
@@ -293,8 +295,8 @@
     margin: 10px 20px;
     border-radius: 10px;
     background: #fdfdfd;
-    box-shadow: inset 5px -5px 0px #d5d5d5,
-        inset -5px 5px 0px #ffffff;
+    box-shadow: inset -5px -5px 0px #cacaca,
+    inset 5px 5px 0px #f6f6f6;
     transition: 0.3s ease;
     cursor: pointer;
     color: #2D3047;
@@ -346,11 +348,13 @@
     text-align: center;
     background-color: #f2f2f2;
     width: 45%;
+
 }
 
 #ranking-table{
     border-collapse: collapse;
     width: 100%;
+    
 }
 
 #ranking-table tr{
@@ -409,8 +413,8 @@
     width: 100%;
     margin: 10px 0;
     border-radius: 10px;
-    box-shadow: inset 5px -5px 0px #d5d5d5,
-    inset -5px 5px 0px #ffffff;
+    box-shadow: inset -5px -5px 0px #cacaca,
+    inset 5px 5px 0px #f6f6f6;
 }
 
 
@@ -458,8 +462,8 @@
 
 .painelNews-card {
     border-radius: 10px;
-    box-shadow: inset 5px -5px 0px #d5d5d5,
-    inset -5px 5px 0px #ffffff;
+    box-shadow: inset -5px -5px 0px #cacaca,
+    inset 5px 5px 0px #f6f6f6;
     padding: 20px;
     display: flex;
     gap: 10px;
@@ -775,6 +779,14 @@ footer {
     justify-content: space-evenly;
 }
 
+.perfilForm-inputs{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: start;
+    justify-content: space-evenly;
+}
+
 /* CLASSE QUE ALTERA IMAGEM DO PERFIL */
 .perfil-conteudo img {
     border-radius: 70px;
@@ -848,12 +860,15 @@ footer {
     text-align: center;
     width: 25%;
     color: #2D3047;
-    box-shadow: 0px 1px solid #94958B 40px -13px rgba(0, 0, 0, 0.3);
+    box-shadow:  5px 5px 0px #d9d9d9,
+    -5px -5px 0px #ffffff;
+    
 }
 
 .personal-stats .card:first-child {
     background-color: #075AB3;
     color: #fff;
+    box-shadow: none;
 }
 
 .personal-stats .card:last-child {
@@ -984,8 +999,10 @@ footer {
 .img-td {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     gap: 10px;
+    flex: 1
+;
 }
 
 /* CELULA INDIVIDUAL DA TABELA */
@@ -1533,7 +1550,7 @@ th {
 
 @media (min-width: 1200px) {
     .login-form {
-        width: 50%;
+        width: 60%;
     }
 
     /* INICIO INDEX */
