--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,7 @@
 
 }
 
-#btnQuestoes {
+.btnQuestoes {
     padding: 10px 0;
     width: 80%;
     text-decoration: none;
@@ -328,9 +328,33 @@
     border-radius: 10px;
     transition: 0.3s;
     margin: 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
 
-#btnQuestoes:hover {
+.btnQuestoes:hover {
+    background-color: #0550a0;
+}
+
+.btnGerencia {
+    padding: 10px 0;
+    width: 80%;
+    text-decoration: none;
+    background-color: #075AB3;
+    color: #fff;
+    border-radius: 10px;
+    transition: 0.3s;
+    margin: 10px 0 50px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    cursor: pointer;
+}
+
+.btnGerencia:hover{
     background-color: #0550a0;
 }
 
@@ -364,16 +388,16 @@
     width: 20%;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     text-align: center;
     background-color: #f2f2f2;
 }
 
-#number {
+.number {
     font-size: 120px
 }
 
-#question-number{
+.question-number{
     width: 100%;
     height: 40%;
     text-align: center;
@@ -388,11 +412,11 @@
     text-decoration: underline;
 }
 
-#numberSubtitle{
+.numberSubtitle{
      font-weight: 600;
 }
 
-#call {
+.call {
     margin: 10px 0;
     font-size: 14px;
 }
@@ -777,6 +801,10 @@ footer {
     justify-content: space-evenly;
 }
 
+.perfil-conteudo h1{
+    margin: 15px 0;
+}
+
 .perfilForm-inputs{
     width: 100%;
     height: 100%;
@@ -982,7 +1010,7 @@ footer {
 /* CLASSE QUE ALTERA TABELA TOP ALUNOS */
 
 
-.ranking-table #table {
+.ranking-table .table {
     margin: 0 20px;
     width: 100%;
     border-collapse: collapse;
@@ -1231,6 +1259,49 @@ th {
 }
 
 /* FIM-INSERIRQUESTOES*/
+
+/*GERENCIAR QUESTOES*/
+
+.gerenciarQuestoes-container{
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.actions{
+    display: flex;
+    gap: 10px;
+}
+
+.actionslinks{
+    text-decoration: none;
+    border: none;
+    background-color: transparent;
+    color: #075AB3;
+    transition: 0.3s;
+}
+
+.actionslinks:hover{
+    cursor: pointer;
+    color: #0550a0;
+}
+
+.btnInserir-container{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+/*FIM-GERENCIAR QUESTOES*/
+
+/*VISUALIZAR-USUARIO*/
+
+.usuarioDetails-container{
+    margin: 50px auto;
+}
+
+/*FIM-VISUALIZAR-USUARIO*/
 
 @media (max-width: 480px) {
     /*LOGIN*/
