--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,26 @@
     margin: 0;
 }
 
+.msg{
+    display: flex;
+    justify-content: center;
+}
 
-
-.pop-up {
+.msgError{
     text-align: center;
-    font-size: 10px;
-    background-color: #e75757;
-    position: absolute;
-    top: 0;
-    left: 30%;
+    font-size: 20px;
+    padding: 20px;
     color: #fff;
+    background-color: #e75757;
+    
+}
+
+.msgDone{
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    font-size: 20pxpx;
+    background-color: #28B463;
 }
 
 /*HEADER*/
